--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hola mundo</title>
+    <meta name="description" content="Esta pagina es una lista de compras">
+    <meta name="Robots"
+    <title>Lista de compras</title>
+    <meta name="viewport"content="width=device-width, initial-scale=1.0">
+    
 </head>
 <body>
-    <p>Hola amigos</p>
+    
 </body>
 </html>
